# wpw

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md
crates/wpw-cli/: Cargo.toml
crates/wpw-cli/src/: clipboard.rs  main.rs  paths.rs  session.rs  tty.rs  vault_io.rs
crates/wpw-cli/src/commands/: add.rs  config.rs  delete.rs  edit.rs  export.rs  generate.rs  get.rs  history.rs  import.rs  init.rs  list.rs  lock.rs  mod.rs  restore.rs  status.rs  totp.rs  unlock.rs
crates/wpw-core/: Cargo.toml
crates/wpw-core/src/: lib.rs  totp.rs
crates/wpw-core/src/crypto/: cipher.rs  kdf.rs  key.rs  mod.rs
crates/wpw-core/src/generator/: mod.rs  passphrase.rs  password.rs
crates/wpw-core/src/vault/: entry.rs  format.rs  header.rs  mod.rs
crates/wpw-host/: Cargo.toml
crates/wpw-host/src/: allowed_origins.rs  handler.rs  main.rs  protocol.rs  session.rs
extension/: manifest.json
extension/background/: service-worker.js
extension/content/: autofill.js
extension/popup/: popup.css  popup.html  popup.js
install/: com.wpw.host.json.template  install-linux.sh  install-windows.ps1  registry-template.reg
