[package]
name = "wpw-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wpw"
path = "src/main.rs"

[dependencies]
wpw-core = { path = "../wpw-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "6"
rpassword = "7"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"
uuid = "1"
aes-gcm = "0.10"
rand = "0.8"
